# bfelf_loader

./: .appveyor.yml  .doxygen.txt  .travis.yml  CMakeLists.txt  README.md
include/: bfelf_loader.h
tests/: CMakeLists.txt  test_fake_elf.cpp  test_file_get_entry.cpp  test_file_get_load_instr.cpp  test_file_get_needed.cpp  test_file_get_needed_list.cpp  test_file_get_num_load_instrs.cpp  test_file_get_num_needed.cpp  test_file_get_pic_pie.cpp  test_file_get_relro.cpp  test_file_get_section_info.cpp  test_file_get_stack_perm.cpp  test_file_init.cpp  test_helpers.cpp  test_load_elf.cpp  test_load_libraries.cpp  test_loader_add.cpp  test_loader_relocate.cpp  test_loader_resolve_symbol.cpp  test_real.cpp  test_real_elf.cpp
